<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/bg_border_gray_with_corner"
    android:orientation="vertical">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />


    <Spinner
        android:id="@+id/spin_activity"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <Button
        android:id="@+id/btn_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/white"
        android:background="@drawable/bg_border_white_with_corner"
        android:text="Select Date" />

    <Button
        android:id="@+id/btn_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_border_white_with_corner"
        android:textColor="@color/white"
        android:text="Select Time" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_get_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_border_white_with_corner"
            android:textColor="@color/white"
            android:text="Get Location" />

        <TextView
            android:id="@+id/txt_lat_lng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_edit_place"
        android:inputType="text"
        android:paddingLeft="5dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="16sp" />


    <EditText
        android:id="@+id/edit_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_edit_duration"
        android:paddingLeft="5dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="16sp" />


    <EditText
        android:id="@+id/edit_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical|top"
        android:hint="@string/hint_edit_comment"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:minHeight="80dp"
        android:paddingLeft="5dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="16sp" />
</LinearLayout>


